--- a/src/app/pages/OLD/profile/profile.html
+++ b/src/app/pages/OLD/profile/profile.html
@@ -1,4 +1,4 @@
-<div ba-panel ba-panel-class="profile-page">
+<!-- <div ba-panel ba-panel-class="profile-page">
   <div class="panel-content">
     <div class="progress-info">Your profile is 70% Complete</div>
     <div class="progress">
@@ -208,4 +208,4 @@
       <i class="ion-android-checkmark-circle"></i>Update Profile
     </button>
   </div>
-</div>
+</div> -->
