--- a/src/sass/theme/_layout.scss
+++ b/src/sass/theme/_layout.scss
@@ -70,9 +70,8 @@ a {
 
 .al-main {
   margin-left: $left-space;
-  padding: 60px 0 0 0;
-  // min-height: 500px;
-  overflow: hidden;
+  padding: 66px 0 34px 0;
+  min-height: 500px;
 }
 
 .al-footer {
@@ -146,13 +145,12 @@ a {
 }
 
 .al-content {
-  padding: 4px 15px 0 15px;
-  overflow: hidden;
+  padding: 8px 32px 8px 40px;
 }
 
 @media screen and (max-width: $resXS) {
   .al-content {
-    padding: 5px 0;
+    padding: 8px 20px;
   }
 }
 
@@ -206,7 +204,7 @@ a {
     text-align: center;
   }
   .al-main {
-    padding-bottom: 10px;
+    padding-bottom: 76px;
   }
   .al-footer-main {
     float: none;
