--- a/src/app/pages/tds/transaction/taxcomputation/taxcomputation.html
+++ b/src/app/pages/tds/transaction/taxcomputation/taxcomputation.html
@@ -112,22 +112,8 @@
             </div>
 
             <div class="form-group">
-                <div class="col-xs-6">
-                    <h3 class="with-line " ng-show="gridLine"> Tax Credit (Sec-87A) </h3>
-                    <div class="row" ng-if="sevenAGridOptions.data.length>0">
-                        <div class="col-md-12">
-                            <div style="height: 250px;" ui-grid="sevenAGridOptions" ui-grid-cellNav ui-grid-pagination ui-grid-edit ui-grid-expandable
-                                ui-grid-auto-resize ui-grid-selection class="grid"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
                 <div class="row">
-
                     <button class="btn btn-primary" type="button" ng-click="calculateAmount();">Calculate</button>
-
                     <label for="inputPassword" class="control-label col-xs-2">Total Deduction/Benefits</label>
                     <div class="col-xs-2">
                         <span class="form-control" ng-bind="entity.totalDeductionBenefits"></span>
@@ -139,10 +125,24 @@
                 <div class="row">
                     <label for="inputPassword" class="control-label col-xs-2">Taxable Amount</label>
                     <div class="col-xs-2">
-                        <span class="form-control" ng-bind="entity.DesgName"></span>
+                        <span class="form-control" ng-bind="entity.taxableAmount"></span>
                     </div>
                 </div>
             </div>
+
+            <div class="form-group">
+                <div class="col-xs-6">
+                    <h3 class="with-line " ng-show="gridLine"> Tax Credit (Sec-87A) </h3>
+                    <div class="row" ng-if="sevenAGridOptions.data.length>0">
+                        <div class="col-md-12">
+                            <div style="height: 250px;" ui-grid="sevenAGridOptions" ui-grid-cellNav ui-grid-pagination ui-grid-edit ui-grid-expandable
+                                ui-grid-auto-resize ui-grid-selection class="grid"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
 
         </div>
     </div>
