--- a/src/app/pages/urm/userlist/userlist.html
+++ b/src/app/pages/urm/userlist/userlist.html
@@ -15,8 +15,8 @@
     <div class="panel-body">
         <div ng-hide="userlist">
             <div class="row">
-                <div id="djGrid1" ui-grid="gridOptions" ui-grid-cellNav ui-grid-edit ui-grid-auto-resize ui-grid-pagination ui-grid-selection
-                    ui-grid-expandable class="djGrid">
+                <div id="djGrid1" ui-grid="gridOptions" ui-grid-pagination
+                    class="djGrid">
                 </div>
             </div>
         </div>
