--- a/src/app/pages/payroll/masters/payband/payband.html
+++ b/src/app/pages/payroll/masters/payband/payband.html
@@ -57,12 +57,12 @@
                                 <field-box page="page" ng-column="page.pageinfo.fields.PBPaybandTemplateId" ng-entity="entity" form="editForm" fb-change="templateOnchange(entity.PBPaybandTemplateId)"></field-box>
                             </div>
                         </div>
-                        <div class="col-md-3">
+                        <!-- <div class="col-md-3">
                             <label ng-bind="page.pageinfo.fields.PBBasedOn.text"></label>
                             <div>
                                 <field-box page="page" ng-column="page.pageinfo.fields.PBBasedOn" ng-entity="entity" form="editForm" fb-change="basedOnchange(entity.PBBasedOn)"></field-box>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="col-md-3">
                             <label ng-bind="page.pageinfo.fields.PBMinimumAmount.text"></label>
                             <div>
