--- a/src/app/theme/components/pageTop/pageTop.html
+++ b/src/app/theme/components/pageTop/pageTop.html
@@ -21,6 +21,6 @@
         <li><a href class="signout" ng-click="logoutSession()"><i class="fa fa-power-off"></i>Sign out</a></li>
       </ul>
     </div>
-    <msg-center></msg-center>
+    <!-- <msg-center></msg-center> -->
   </div>
 </div>
