--- a/src/app/pages/tds/transaction/taxcomputation/taxcomputation.html
+++ b/src/app/pages/tds/transaction/taxcomputation/taxcomputation.html
@@ -2,7 +2,8 @@
 </grid-box>
 
 
-<form name="editForm " class="form-horizontal" novalidate ng-submit="saveForm() " ng-hide="showEditForm ">
+<form name="editForm " ng-submit="taxComSave(editForm,entity)" class="form-horizontal" novalidate ng-submit="saveForm() "
+    ng-hide="showGrid ">
     <div class="panel panel-default xmedium-panel ">
         <edit-panel-head page="page" page-title="page.pageinfo.title " reset-form="resetFormCommon(editForm) " clear-form="clearFormCommon(editForm) "
             close-form="closeForm(editForm) " show-close="true " show-save="true " show-clear="false " show-list="false
@@ -10,72 +11,69 @@
 
         <div class="panel-body " style="padding:5px " ng-scrollbars ng-scrollbars-config="config ">
             <div class="form-group">
-                <div class="row">
-                    <label for="inputEmail" class="control-label col-xs-2">{{page.pageinfo.fields.TCEmpId.text}}</label>
-                    <div class="col-xs-2">
-                        <select class="form-control" ng-model="entity.selectedEmp" ng-disabled="disabledEmp" ng-change="selectedDesignDept()" ng-options="employee.name  for employee in page.pageinfo.selects.TCEmpId">
-                        </select>
-                    </div>
-                    <label for="inputPassword" class="control-label col-xs-2">Employee Code</label>
-                    <div class="col-xs-2">
-                        <span class="form-control" ng-bind="entity.EmpCode"></span>
-                    </div>
-                    <label for="inputEmail" class="control-label col-xs-2">Department</label>
-                    <div class="col-xs-2">
-                        <span class="form-control" ng-bind="entity.DeptName"></span>
-                    </div>
+                <label for="inputEmail" class="control-label col-xs-2">{{page.pageinfo.fields.TCEmpId.text}}</label>
+                <div class="col-xs-2">
+                    <select class="form-control" ng-model="entity.selectedEmp" ng-disabled="disabledEmp" ng-change="selectedDesignDept()" ng-options="employee.name  for employee in page.pageinfo.selects.TCEmpId">
+                    </select>
+                    
+                </div>
+                <label for="inputEmail" class="control-label col-xs-2">{{page.pageinfo.fields.TCFinancialYearId.text}}</label>
+                <div class="col-xs-2">
+                    <select class="form-control" ng-model="entity.yearId" ng-change="getTaxComputation()" ng-options="employee.name  for employee in page.pageinfo.selects.TCFinancialYearId">
+                    </select>
+                </div>
+                <label for="inputEmail" class="control-label col-xs-2">{{page.pageinfo.fields.MonthId.text}}</label>
+                <div class="col-xs-2">
+                    <select class="form-control" ng-model="entity.monthId" ng-options="employee.name  for employee in page.pageinfo.selects.MonthId">
+                    </select>
                 </div>
             </div>
 
-            <div class="form-group">
-                <div class="row">
-                    <label for="inputPassword" class="control-label col-xs-2">Designation</label>
-                    <div class="col-xs-2">
-                        <span class="form-control" ng-bind="entity.DesgName"></span>
-                    </div>
-                    <label for="inputEmail" class="control-label col-xs-2">Joining Date</label>
-                    <div class="col-xs-2">
-                        <span class="form-control" ng-bind="entity.JDDate"></span>
-                    </div>
-                    <label for="inputEmail" class="control-label col-xs-2">Date Of Birth</label>
-                    <div class="col-xs-2">
-                        <span class="form-control" ng-bind="entity.PdDateOfBirth"></span>
-                    </div>
+            <div class="form-group" ng-show="isYear">
+                <label for="inputPassword" class="control-label col-xs-2">{{page.pageinfo.fields.EmpCode.text}}</label>
+                <div class="col-xs-2">
+                    <span class="form-control" ng-bind="entity.EmpCode"></span>
                 </div>
-            </div>
-
-
-            <div class="form-group">
-                <div class="row">
-                    <label for="inputEmail" class="control-label col-xs-2">Category</label>
-                    <div class="col-xs-2">
-                        <span class="form-control" ng-bind="entity.JDCategory"></span>
-                    </div>
-
-                    <label for="inputEmail" class="control-label col-xs-2">Gender</label>
-                    <div class="col-xs-2">
-                        <span class="form-control" ng-bind="entity.GenderName"></span>
-                    </div>
-                    <label for="inputEmail" class="control-label col-xs-2">Year</label>
-                    <div class="col-xs-2">
-                        <select class="form-control" ng-model="entity.year" ng-change="getTaxComputation()" ng-options="employee.name  for employee in page.pageinfo.selects.TCEmpId">
-                        </select>
-                    </div>
+                <label for="inputEmail" class="control-label col-xs-2">{{page.pageinfo.fields.DeptName.text}}</label>
+                <div class="col-xs-2">
+                    <span class="form-control" ng-bind="entity.DeptName"></span>
                 </div>
-            </div>
-
-            <div class="form-group">
-                <div class="row">
-                    <label for="inputEmail" class="control-label col-xs-2">Gross Income</label>
-                    <div class="col-xs-2">
-                        <span class="form-control" ng-bind="entity.SalAmount"></span>
-                    </div>
+                <label for="inputPassword" class="control-label col-xs-2">{{page.pageinfo.fields.DesgName.text}}</label>
+                <div class="col-xs-2">
+                    <span class="form-control" ng-bind="entity.DesgName"></span>
                 </div>
             </div>
 
 
+            <div class="form-group" ng-show="isYear">
+                <label for="inputEmail" class="control-label col-xs-2">{{page.pageinfo.fields.JDDate.text}}</label>
+                <div class="col-xs-2">
+                    <span class="form-control" ng-bind="entity.JDDate"></span>
+                </div>
+                <label for="inputEmail" class="control-label col-xs-2">{{page.pageinfo.fields.DateOfBirth.text}}</label>
+                <div class="col-xs-2">
+                    <span class="form-control" ng-bind="entity.PdDateOfBirth"></span>
+                </div>
+                <label for="inputEmail" class="control-label col-xs-2">{{page.pageinfo.fields.Category.text}}</label>
+                <div class="col-xs-2">
+                    <span class="form-control" ng-bind="entity.JDCategory"></span>
+                </div>
+            </div>
 
-            <div class="form-group">
+            <div class="form-group" ng-show="isYear">
+                <label for="inputEmail" class="control-label col-xs-2">{{page.pageinfo.fields.GenderName.text}}</label>
+                <div class="col-xs-2">
+                    <span class="form-control" ng-bind="entity.GenderName"></span>
+                </div>
+                <label for="inputEmail" class="control-label col-xs-2">{{page.pageinfo.fields.GrossName.text}}</label>
+                <div class="col-xs-2">
+                    <span class="form-control" ng-bind="entity.SalAmount"></span>
+                </div>
+            </div>
+
+
+
+            <div class="form-group" ng-show="gridLine">
                 <div class="col-xs-6">
                     <h3 class="with-line " ng-show="gridLine"> HRA Exemption Calculation</h3>
                     <div class="row" ng-if="weekGridOptions.data.length>0">
@@ -87,7 +85,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group" ng-show="gridLine">
                 <div class="col-xs-6">
                     <h3 class="with-line " ng-show="gridLine">Deduction Under Chapter VI (Sec-80C)</h3>
                     <div class="row" ng-if="eightyCGridOptions.data.length>0">
@@ -99,7 +97,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group" ng-show="gridLine">
                 <div class="col-xs-6">
                     <h3 class="with-line " ng-show="gridLine"> Deduction Under Chapter VI-A</h3>
                     <div class="row" ng-if="sixAGridOptions.data.length>0">
@@ -111,26 +109,35 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group" ng-show="isYear">
                 <div class="row">
                     <button class="btn btn-primary" type="button" ng-click="calculateAmount();">Calculate</button>
-                    <label for="inputPassword" class="control-label col-xs-2">Total Deduction/Benefits</label>
+                    <label for="inputPassword" class="control-label col-xs-2">{{page.pageinfo.fields.TotalDeductionOrBenefit.text}}</label>
                     <div class="col-xs-2">
                         <span class="form-control" ng-bind="entity.totalDeductionBenefits"></span>
                     </div>
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group" ng-show="isCalculated">
                 <div class="row">
-                    <label for="inputPassword" class="control-label col-xs-2">Taxable Amount</label>
+                    <label for="inputPassword" class="control-label col-xs-2">{{page.pageinfo.fields.TaxableAmount.text}}</label>
                     <div class="col-xs-2">
                         <span class="form-control" ng-bind="entity.taxableAmount"></span>
                     </div>
                 </div>
             </div>
 
-            <div class="form-group">
+            <div class="form-group" ng-show="isCalculated">
+                <div class="row">
+                    <label for="inputPassword" class="control-label col-xs-2">{{page.pageinfo.fields.TaxOnTotalIncome.text}}</label>
+                    <div class="col-xs-2">
+                        <span class="form-control" ng-bind="entity.taxOnTotalIncome"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group" ng-show="isCalculated">
                 <div class="col-xs-6">
                     <h3 class="with-line " ng-show="gridLine"> Tax Credit (Sec-87A) </h3>
                     <div class="row" ng-if="sevenAGridOptions.data.length>0">
@@ -142,7 +149,48 @@
                 </div>
             </div>
 
+            <div class="form-group" ng-show="isCalculated">
+                <div class="row">
+                    <label for="inputPassword" class="control-label col-xs-2">{{page.pageinfo.fields.TaxWithSurcharge.text}}</label>
+                    <div class="col-xs-2">
+                        <span class="form-control" ng-bind="entity.taxWithSurcharge"></span>
+                    </div>
+                </div>
+            </div>
 
+            <div class="form-group" ng-show="isCalculated">
+                <div class="row">
+                    <label for="inputPassword" class="control-label col-xs-2">{{page.pageinfo.fields.TaxWithCess.text}}</label>
+                    <div class="col-xs-2">
+                        <span class="form-control" ng-bind="entity.taxWithCess"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group" ng-show="isCalculated">
+                <div class="row">
+                    <label for="inputPassword" class="control-label col-xs-2">{{page.pageinfo.fields.TaxLiabilityMonthly.text}}</label>
+                    <div class="col-xs-2">
+                        <span class="form-control" ng-bind="entity.taxLiabilityMonthly"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group" ng-show="isCalculated">
+                <div class="row">
+                    <label for="inputPassword" class="control-label col-xs-2">{{page.pageinfo.fields.TaxLiabilityYearly.text}}</label>
+                    <div class="col-xs-2">
+                        <span class="form-control" ng-bind="entity.taxableAmountYearly"></span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div class="row">
+                <div class="col-md-12 form-group text-center" ng-show=isCalculated ">
+                    <button type="submit " class="btn btn-info btn-lg ">Save</button>
+                    <button type="button " class="btn btn-danger btn-lg " ng-click="closeWeekOffAdd() ">Close</button>
+                </div>
+            </div> -->
 
         </div>
     </div>
