--- a/src/app/pages/payroll/masters/payband/payband.html
+++ b/src/app/pages/payroll/masters/payband/payband.html
@@ -101,7 +101,7 @@
 
 
                             <div id="djGridPay" ui-grid="payGridOptions" ui-grid-expandable ui-grid-auto-resize ui-grid-pagination ui-grid-selection
-                                ui-grid-pinning ui-grid-edit class="paybandgrid"></div>
+                                ui-grid-pinning ui-grid-edit class="paybandgrid payband"></div>
                         </div>
                         <div class="col-md-2">
                             <table class="table table-condensed table-striped">
