--- a/src/app/pages/payroll/masters/paybandtemplate/paybandtemp.html
+++ b/src/app/pages/payroll/masters/paybandtemplate/paybandtemp.html
@@ -104,6 +104,7 @@
     /* Make sure the container doesn't shrink too small */
 
     .ui-select-container {
-        min-width: 50%;
+        min-width: 100px;
+        z-index: 9999999;
     }
 </style>
