--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -22,11 +22,11 @@
                 <ui-knob value="totalActiveEmpValue" options="totalActiveEmp" title="Hello"></ui-knob>
             </div>
             <div class="col-lg-3 ">
-                <ui-knob value="totalPresentValuePercentage" options="totalPresent"></ui-knob>
+                <ui-knob value="totalPresentValuePercentage" options="totalPresent"  ng-click="listPresent()" ></ui-knob>
             </div>
 
             <div class="col-lg-3 ">
-                <ui-knob value="totalLeaveTodayValuePercentage" options="totalLeaveToday"></ui-knob>
+                <ui-knob value="totalLeaveTodayValuePercentage" options="totalLeaveToday"  ng-click="listLeave()" ></ui-knob>
             </div>
             <div class="col-lg-3 " >
 
@@ -42,13 +42,13 @@
                 <ui-knob value="totalActiveEmpValue" options="totalActiveEmp" title="Hello"></ui-knob>
             </div>
             <div class="col-lg-3 ">
-                <ui-knob value="totalPresentValueCount" options="totalPresentCount"></ui-knob>
+                <ui-knob value="totalPresentValueCount" options="totalPresentCount"  ng-click="listPresent()"></ui-knob>
             </div>
 
 
 
             <div class="col-lg-3 ">
-                <ui-knob value="totalLeaveTodayValuePercentageCount" options="totalLeaveTodayCount"></ui-knob>
+                <ui-knob value="totalLeaveTodayValuePercentageCount" options="totalLeaveTodayCount" ng-click="listLeave()"></ui-knob>
             </div>
 
             <div class="col-lg-3 ">
